fixed column spacing
took the class out of the column and into its own div

--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -5,31 +5,10 @@
     padding: 0px;
 
     background-image: url("../media/temp.jpg");
-/*    background-attachment: fixed;*/
+    /*    background-attachment: fixed;*/
     background-position: center;
-/*    background-repeat: no-repeat;*/
+    /*    background-repeat: no-repeat;*/
     background-size: cover;
-}
-
-.fullscreenBanner button {
-/*
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 150px;
-    height: 50px;
-    color: rgb(195, 16, 0);
-    text-decoration: none;
-    font-family: Open Sans !important;
-    font-size: 18px;
-    font-family: 600 !important;
-    font-weight: bolder;
-    background-color: rgba(0 , 0 , 0, 0.7);
-    border: 1px solid black;
-    border-radius: 0px;
-    border-color: s;
-*/
 }
 
 .bannerButton button{
@@ -68,7 +47,7 @@
     /*    top: 75px;*/
     height: 50px;
     z-index: 999;
-/*    background: none !important;*/
+    /*    background: none !important;*/
     background: transparent;
     border: 0 !important;
     box-shadow: none !important;
@@ -93,39 +72,28 @@
 /* content grid starts here */
 
 .content-grid {
-    height: auto;
-    width: 100%;
-    margin-top: 5px;
-    /*    border-top: 3px solid rgba(195, 16, 0, .6);*/
 }
 
 .col-content {
     margin-top: 75px;
     margin-bottom: 75px;
-    width: 24.6666667%;
     height: 500px;
-
-    /*    background-color: black;*/
-    color: white;
+    border: 1px solid black;
 }
 
 .c1 {
-    margin-left: 8%;
     background: url("../media/1.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 .c2 {
-    margin-left: 5%;
-    margin-right: 5%;
     background: url("../media/2.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 .c3 {
-    margin-right: 8%;
     background: url("../media/3.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -166,4 +134,9 @@ a {
 
 .navbar-inverse .navbar-nav>a, .navbar-inverse .navbar-nav>.open>a, nav ul li.dropdown ul.dropdown-menu {
     background: rgba(0, 0, 0, 0.8) !important;
+}
+
+#myChart {
+    height: 50px;
+    width: 50px;
 }
